# stitch

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
cookbook/: bulletin_hooks.py  ray_cluster.py  rollout_control.py  rollout_control_test.py  serving.py  sidecar.py  sidecar_process.py  sidecar_test.py  trainer_helpers.py  trainer_helpers_test.py
cookbook/common/: SGLANG_FORK.md  config.py  constants.py  hooks.py  hooks_test.py  launch.py  process.py  ray_cluster.py  server.py  serving_image.py  sidecar.py  smoke.py  trainer_image.py
cookbook/disagg_smoke/: README.md  app.py  delta.py  delta_test.py
cookbook/glm45_air_fp8/: config.py  hooks.py  hooks_test.py  infra.py  modal_app.py  sidecar.py
cookbook/local_disagg/: README.md  __init__.py  harness.py  harness_test.py
cookbook/miles/: app.py  config.py  hooks.py  pins.py  prep.py
cookbook/miles_disagg/: MILES_FORK.md  README.md  _spawn_into_deployed.py  app.py  config.py  helpers.py  hooks.py  launch.py  launch.sh  megatron_r3_num_out_tokens.patch  modal_probes.py  modal_train.py  prep.py  prep_app.py  serving.py  sidecar.py  trainer_image.py
cookbook/slime/: app.py  config.py  hooks.py  pins.py  trainer_image.py
cookbook/slime_disagg/: README.md  __init__.py  app.py  config.py  helpers.py  hooks.py  hooks_test.py  launch.py  modal_app.py  modal_helpers.py  modal_train.py  prep_app.py  serving.py  sidecar.py  trainer_image.py
cookbook/standalone_rollouts/: README.md  __init__.py  auth.py  auth_test.py  base_checkpoint.py  base_checkpoint_test.py  delta_view.py  delta_view_test.py  frontdoor.py  frontdoor_test.py  ledger.py  ledger_test.py  modal_serve.py  opaque_frontdoor.py  opaque_frontdoor_test.py  opaque_protocol.py  opaque_protocol_test.py  provider.py  provider_test.py  simulator_test.py
docs/: api-shim.md  architecture.md  kv-version-namespace-design.md  production-roadmap.md
examples/: README.md
examples/glm45_air_fp8/: config.py  convert_hf_to_torch_dist_modal.py  hooks.py  hooks_test.py  infra.py  modal_app.py  sidecar.py
modal_probes/: __init__.py  confirm_router_bias_fp32.py  inspect_dapo_dataset.py  inspect_moonlight_weights.py  inspect_s3_transport.py  verify_mla_routing.py
profiling/: __init__.py
src/stitch/: __init__.py  bulletin.py  bulletin_test.py  protocol.py  protocol_test.py  publish.py  publish_test.py  service.py  service_test.py  sync.py  sync_test.py  types.py  versions.py
tests/: README.md  cookbook_hooks_test.py  instances_test.py  publish_test.py  reconcile_liveness_test.py  reconcile_test.py  s3_store_test.py
tools/probes/: README.md  app.py  local_shakeout.py  poller.py  replay_publisher.py  traffic.py
(+81 files in other folders)
