[project]
name = "stitch"
version = "0.1.0"
description = "Trainer-agnostic disaggregated rollout weight sync helpers"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# providers/modal.py uses the Modal SDK and httpx (rollout-pool wake).
modal = ["modal>=1.5.1.dev9", "httpx"]
# The cookbook sidecars run the app under uvicorn, but Modal images install it
# explicitly; the packaged server code needs only fastapi + httpx.
sglang = ["fastapi", "httpx"]

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stitch"]
exclude = ["*_test.py"]

[tool.pytest.ini_options]
testpaths = ["src", "cookbook"]
python_files = ["*_test.py"]
