[project]
name = "stitch"
version = "0.1.0"
description = "Trainer-agnostic disaggregated rollout weight sync helpers"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# The Modal instances (stores/modal_volume.py, pools/modal_flash.py) use the Modal
# SDK and httpx (the pool wake).
modal = ["modal>=1.5.1.dev9", "httpx"]
# The sidecar runs the versioned proxy under uvicorn (Modal images install it
# explicitly); the packaged service code needs only fastapi + httpx.
sglang = ["fastapi", "httpx"]

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stitch"]
exclude = ["*_test.py"]

[tool.pytest.ini_options]
testpaths = ["src", "cookbook"]  # google-style: foo_test.py sits beside foo.py
python_files = ["*_test.py"]
pythonpath = ["."]  # so the co-located cookbook hook test imports the top-level cookbook/ package
