[project]
name = "stitch"
version = "0.1.0"
description = "Trainer-agnostic disaggregated rollout weight sync helpers"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# httpx is the pool wake (pools/modal_flash.py).
modal = ["modal>=1.5.1.dev9", "httpx"]
# fastapi + httpx only; Modal images install uvicorn separately.
sglang = ["fastapi", "httpx"]

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stitch"]
exclude = ["*_test.py"]

[tool.pytest.ini_options]
testpaths = ["src", "cookbook"]  # google-style: foo_test.py sits beside foo.py
python_files = ["*_test.py"]
pythonpath = ["."]  # so the co-located cookbook hook test imports the top-level cookbook/ package
